2004-11-16  Dan Winship  <danw@novell.com>

	* glib/Value.cs: add new constructors for enum and boxed values
	that take the name of the type rather than an object/property
	name pair; this way they work for both GObject properties and
	GtkContainer child properties.

	* glib/glue/value.c (gtksharp_value_create_from_type_name): glue
	for that

	* glib/Opaque.cs (GetOpaque): Fix this.

	* generator/Property.cs (Generate): Use the new GLib.Value
	constructors. (Fixes setting of enum-valued child properties.)

2004-11-15  Dan Winship  <danw@novell.com>

	* gtk/glue/container.c (gtksharp_container_get_focus_child): New
	glue method to get container->focus_child

	* gtk/Gtk.metadata: hide SetFocusChild

	* gtk/Container.custom (FocusChild): implement with both getter
	and setter

2004-11-15  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide the Get/Set Color methods that are marked
	deprecated but didn't exist in 1.0.

2004-11-13  Duncan Mak  <duncan@ximian.com>

	* generator/SymbolTable.cs: Add support for GDestroyNotify, so
	that `gtk_cell_layout_set_cell_data_func' will be generated in
	Gtk.ComboBox.

2004-11-13  Mike Kestner  <mkestner@novell.com>

	* */*-api.raw : rerun the parser for new vm-age and cleanups.
	* parser/gapi_pp.pl : suppress union types, since we can't generate
	them.  smarter get_type regex. ignore #errors.
	* parser/gapi2xml.pl : generate vm elements for GInterfaces. Deal
	with G_CONST_RETURN in vms. deal with "struct _foo" types in method
	prototypes.
	* gtk/ComboBox.custom : remove now correctly generated dllimport.

2004-11-13  Mike Kestner  <mkestner@novell.com>

	* sources/gda.patch : fix broken signal defs.
	* sources/gnomedb.patch : fix broken signal defs.
	* sources/Makefile.am : apply new patches, and dist some others.

2004-11-12  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl : fix multi-line extern parsing.

2004-11-12  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl : fix a struct parsing bug.
