@@ -23,7 +23,6 @@
 namespace GtkSharp.Generation {
 
 	using System;
-	using System.Collections;
 	using System.IO;
 	using System.Xml;
 
@@ -31,15 +30,14 @@ namespace GtkSharp.Generation {
 		
 		XmlElement sig;
 		string ns;
-		string retval = "";
-		string s_ret = "";
-		string p_ret = "";
+		ReturnValue retval;
 		Parameters parms = null;
 
 		public SignalHandler (XmlElement sig, string ns)
 		{
 			this.sig = sig;
 			this.ns = ns;
+			retval = new ReturnValue (sig["return-type"]);
 			XmlElement params_elem = sig["parameters"] as XmlElement;
 			if (params_elem != null)
 				parms = new Parameters (params_elem, ns);
@@ -47,22 +45,8 @@ namespace GtkSharp.Generation {
 
 		public bool Validate ()
 		{
-			XmlElement ret_elem = sig["return-type"];
-			if (ret_elem == null) {
-				Console.Write("Missing return-type ");
-				return false;
-			}
-			
-			retval = ret_elem.GetAttribute("type");
-			if (retval == "") {
-				Console.Write("Invalid return-type ");
-				return false;
-			}
-			
-			s_ret = SymbolTable.Table.GetCSType(retval);
-			p_ret = SymbolTable.Table.GetMarshalReturnType(retval);
-			if ((s_ret == "") || (p_ret == "")) {
-				Console.Write("Funky type: " + retval);
+			if (!retval.Validate ()) {
+				Console.Write(" in signal handler " + Name);
 				return false;
 			}
 			
@@ -89,7 +73,7 @@ namespace GtkSharp.Generation {
 				
 		private string BaseName {
 			get {
-				string result = SymbolTable.Table.GetName (retval);
+				string result = SymbolTable.Table.GetName (retval.CType);
 				for (int i = 0; i < parms.Count; i++) {
 					if (parms[i].Generatable is ObjectGen || parms[i].Generatable is InterfaceGen) {
 						result += "Object";
@@ -130,21 +114,21 @@ namespace GtkSharp.Generation {
 			sw.WriteLine("\tusing System;");
 			sw.WriteLine("\tusing System.Runtime.InteropServices;");
 			sw.WriteLine();
-			sw.Write("\tinternal delegate " + p_ret + " ");
+			sw.Write("\tinternal delegate " + retval.MarshalType + " ");
 			sw.WriteLine(DelegateName + "(" + ISig + ", int key);");
 			sw.WriteLine();
 			sw.WriteLine("\tinternal class " + Name + " : GLib.SignalCallback {");
 			sw.WriteLine();
 			sw.WriteLine("\t\tprivate static " + DelegateName + " _Delegate;");
 			sw.WriteLine();
-			sw.Write("\t\tprivate static " + p_ret + " ");
+			sw.Write("\t\tprivate static " + retval.MarshalType + " ");
 			sw.WriteLine(CallbackName + "(" + ISig + ", int key)");
 			sw.WriteLine("\t\t{");
 			sw.WriteLine("\t\t\tif (!_Instances.Contains(key))");
 			sw.WriteLine("\t\t\t\tthrow new Exception(\"Unexpected signal key \" + key);");
 			sw.WriteLine();
 			sw.WriteLine("\t\t\t" + Name + " inst = (" + Name + ") _Instances[key];");
-			if ((s_ret == "void") && (parms.Count == 1)) {
+			if ((retval.CSType == "void") && (parms.Count == 1)) {
 				sw.WriteLine("\t\t\tEventHandler h = (EventHandler) inst._handler;");
 				sw.WriteLine("\t\t\th (inst._obj, new EventArgs ());");
 				sw.WriteLine("\t\t}");
@@ -174,14 +158,14 @@ namespace GtkSharp.Generation {
 				sw.WriteLine("\t\t\targv[0] = inst._obj;");
 				sw.WriteLine("\t\t\targv[1] = args;");
 				sw.WriteLine("\t\t\tinst._handler.DynamicInvoke(argv);");
-				if (retval != "void") {
+				if (retval.CSType != "void") {
 					sw.WriteLine ("\t\t\tif (args.RetVal == null)");
-					if (s_ret == "bool")
+					if (retval.CSType == "bool")
 						sw.WriteLine ("\t\t\t\treturn false;");
 					else
 						sw.WriteLine ("\t\t\t\tthrow new Exception(\"args.RetVal unset in callback\");");
 
-					sw.WriteLine("\t\t\treturn (" + p_ret + ") " + table.ToNativeReturn (retval, "((" + s_ret + ")args.RetVal)") + ";");
+					sw.WriteLine("\t\t\treturn (" + retval.MarshalType + ") " + table.ToNativeReturn (retval.CType, "((" + retval.CSType + ")args.RetVal)") + ";");
 				}
 				sw.WriteLine("\t\t}");
 				sw.WriteLine();
