@@ -1,3 +1,12 @@
+2004-11-17  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Makefile.am : add new file.
+	* generator/Method.cs : refactoring to use ReturnValue.
+	* generator/MethodBody.cs : remove unnecessary code.
+	* generator/ReturnValue.cs : class for redundant retval handling.
+	* generator/Signal.cs : refactoring for ReturnValue.
+	* generator/SignalHandler.cs : refactoring for ReturnValue.
+
 2004-11-16  Dan Winship  <danw@novell.com>
 
 	* glib/Value.cs: add new constructors for enum and boxed values
